--- a/src/html/news.html
+++ b/src/html/news.html
@@ -24,10 +24,10 @@
 <div class="psfixbg"></div>
 <div class="psfixbg linen-fixbg"></div>
 <div class="container">
-    <div class="sce2 pw2">
-        <div class="ab-pa">
+    <div class="sce2 nw1 pw2">
+        <div class="nw-pa">
             <ul class="news-list">
-                <li><a href="news-detail.html" class="scapic btn-more-hv clearfix">
+                <li><a href="news-detail.html" class="scapic btn-more-hv">
                     <div class="pic"><img src="img/news1.jpg" alt=""></div>
                     <div class="desc">
                         <p class="nowti">虚拟新闻标题清晨，远方的天际呈现出隐隐的橘红色</p>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </a></li>
-                <li><a href="news-detail.html" class="scapic btn-more-hv clearfix">
+                <li><a href="news-detail.html" class="scapic btn-more-hv">
                     <div class="pic"><img src="img/news2.jpg" alt=""></div>
                     <div class="desc">
                         <p class="nowti">虚拟新闻标题清晨，远方的天际呈现出隐隐的橘红色</p>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </a></li>
-                <li><a href="news-detail.html" class="scapic btn-more-hv clearfix">
+                <li><a href="news-detail.html" class="scapic btn-more-hv item2">
                     <div class="desc">
                         <p class="nowti">虚拟新闻标题清晨，远方的天际呈现出隐隐的橘红色</p>
                         <p class="tx">藏语称“朵帮”，就是垒起来的石头之意。“玛尼堆”也被称为“神堆”，藏族群众在这些石块和石板……</p>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </a></li>
-                <li><a href="news-detail.html" class="scapic btn-more-hv clearfix">
+                <li><a href="news-detail.html" class="scapic btn-more-hv item2">
                     <div class="desc">
                         <p class="nowti">虚拟新闻标题清晨，远方的天际呈现出隐隐的橘红色</p>
                         <p class="tx">藏语称“朵帮”，就是垒起来的石头之意。“玛尼堆”也被称为“神堆”，藏族群众在这些石块和石板……</p>
@@ -70,6 +70,7 @@
                     </div>
                 </a></li>
             </ul>
+            @@include('./pager.html')
         </div>
     </div>
 </div>
