--- a/src/html/play2.html
+++ b/src/html/play2.html
@@ -29,7 +29,7 @@
 <div class="container">
     <div class="page-layout page-tb happy-page">
         <div class="happy-pw">
-			<div class="btn-wrap bdsharebuttonbox tar"><a href="javascript:;" data-cmd="mshare" class="btn-book icon iconfont iconzanzhuanhuan0101 btn-book-hv">我要分享</a></div>
+			<div class="btn-wrap bdsharebuttonbox tar"><a href="javascript:;" data-cmd="more" class="btn-book icon iconfont iconzanzhuanhuan0101 btn-book-hv">我要分享</a></div>
             <div class="happy-list">
 				<div class="item"><a href="#" class="c">
 					<div class="pic"><img src="img/happy5.jpg" alt=""></div>
